tests/typing/fail/array/create_arg_array_atomic_mismatch.act
contract A

constructor(uint[2] y)


contract B

constructor()

creates
  A a := new A(3)
